deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yt-reverse-playlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yt-reverse-playlist
  template:
    metadata:
      labels:
        app: yt-reverse-playlist
    spec:
      containers:
        - name: backend
          image: registry.digitalocean.com/lastfirst/backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 20
