deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-reverse-playlist
spec:
  selector:
    app: yt-reverse-playlist
  ports:
    - port: 80
      targetPort: 8080
